# iso

./: .clang-format  .gitignore  CMakeLists.txt
include/: defs.h  global.h  linmath.h  log.h
src/: main.cpp
src/engine/: engine.h  input.cpp  iso.cpp  iso.h  renderer.cpp  renderer.h  texture.cpp  texture.h
